# guardrail

./: .gitignore  CLAUDE.md  LICENSE  README.md  guardrail.yml.example  pyproject.toml
.claude-plugin/: marketplace.json
fixtures/examples/: all_pass.csv  grain_fail.csv  join_fail.csv  multi_model.csv  unexpected_values.csv
fixtures/manifests/: two_models.json
guardrail/: __init__.py  blast.py  checks.py  config.py  csv_writer.py  dashboard.py  evaluate.py  git.py  manifest.py  server.py  snowflake_client.py
guardrail/templates/: dashboard.html
plugin/: .mcp.json  CLAUDE.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: guardrail-reminder.py  run-server.sh
plugin/skills/guardrail/: SKILL.md
tests/: conftest.py  test_blast.py  test_checks.py  test_evaluate.py  test_git.py  test_manifest.py
